[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/gui_scripts/option.gd" type="Script" id=1]

[node name="option" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 60 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 387.0
margin_right = 596.0
margin_bottom = 412.0
size_flags_horizontal = 3
text = "Label"
clip_text = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 604.0
margin_right = 1200.0
margin_bottom = 800.0
size_flags_horizontal = 3
alignment = 1

[node name="SpinBox" type="SpinBox" parent="HBoxContainer/VBoxContainer"]
margin_top = 357.0
margin_right = 596.0
margin_bottom = 402.0

[node name="HSlider" type="HSlider" parent="HBoxContainer/VBoxContainer"]
margin_top = 410.0
margin_right = 596.0
margin_bottom = 442.0
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
